Adding Public Settings Endpoint 🎉
